<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstTravel</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="item_menu_new_note">+ note</string>
    <string name="item_menu_new_task">+ task</string>
    <string name="item_menu_new_debit">+ debit</string>
    <string name="item_menu_show_as_list">Show as List</string>

    <string-array name="item_menu_list">
        <item>Travel</item>
        <item>Notes</item>
        <item>Debits</item>
        <item>Places</item>
        <item>Documents</item>
    </string-array>

    <string name="item_title_travel">Travel</string>
    <string name="item_title_notes">Notes</string>
    <string name="item_title_debits">Debits</string>
    <string name="item_title_places">Places</string>
    <string name="item_title_documents">Documents</string>



    <!-- COMMONS Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_label_title">TITLE:</string>
    <string name="dialog_label_description">DESCRIPTION:</string>
    <string name="dialog_label_value">VALUE:</string>
    <string name="dialog_label_address">ADDRESS:</string>
    <string name="dialog_label_money">MONEY:</string>
    <string name="dialog_label_start_travel">CHECK IN:</string>
    <string name="dialog_label_finish_travel">CHECK OUT:</string>
    <string name="dialog_hint_address">Search</string>

    <!-- NOTE Dialog -->
    <string name="dialog_create_note_title">Create a new note</string>
    <string name="dialog_update_note_title">Update note</string>

    <!-- DEBIT Dialog -->
    <string name="dialog_create_debit_title">Create a new note</string>
    <string name="dialog_update_debit_title">Update note</string>

    <!-- PLACE Dialog -->
    <string name="dialog_create_place_title">Create a new place</string>
    <string name="dialog_update_place_title">Update place</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_travel">Input about your travel</string>

    <string name="mandatory_field">It\'s mandatory</string>
    <string name="gps_fail_text_error">Couldn\'t get location information. Please enable GPS</string>
    <string name="gps_fail_title_error">GPS status</string>
    <string name="intenet_connect_title_error">Internet Connection Error</string>
    <string name="intenet_connect_text_error">Please connect to working Internet connection!</string>

</resources>
