<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:orientation="vertical"
    android:padding="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/background_gray"
        android:layout_marginBottom="7dp">

        <TextView
            android:id="@+id/document_create_dialog_img_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/background_gray"
            android:textSize="2sp"/>

        <ImageView
            android:id="@+id/document_create_dialog_img"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/search_image" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_title"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/document_create_dialog_edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:maxLength="70"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_description"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/document_create_dialog_edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:maxLength="150"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/document_create_dialog_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="2"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/document_create_dialog_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="3"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center"
                android:text="@string/dialog_ok"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>